compressed images & trying to fix scroll on mobile

--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -13,6 +13,9 @@
 // todo move fade-in to animations
 
 .landing-page {
+  // scroll fix
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   height: 100vh;
   background-image: linear-gradient(
       45deg,
